# reqvallive

./: .env.example  .gitignore  CHANGELOG.md  DEPENDENCIA_SIM_REQ_VALIDATOR.md  README.md  pyproject.toml
docs/: ESCOPO_DISSERTACAO.md  FEATURES_MESTRADO_SE.md  PLANO_CATIA_GSE_APP.md  PLANO_GATE_SUCCESS_CRITERIA.md  RODAR_EM_CASA.md  ROTEIRO_IMPLEMENTACAO.md
docs/_markdown/: [SIS-08][2025] 05 - Methods.md
examples/: Relatório ReqValLive — PASS.md  altitude_variation.json  battery_threshold.json  catia_export_go_to_verification.sysml  llm_test_ideas.md  mqtt_entities_payload.json  mqtt_payload.json  requirements_sample.md  success_criteria_model.md
patches/: sim_req_validator_aggregation_range.patch
reference/_markdown/: CONCEITO DE FUNCIONAMENTO.md  [SIS-08][2025] 05 - Methods.md
scripts/: README.md  ensure_simreq_range.py  probe_llm.py  publish_three_drones.py
src/reqvallive/: __init__.py  __main__.py  config.py  main.py
src/reqvallive/api/: routes.py
src/reqvallive/eval/: criteria_gate.py  live.py
src/reqvallive/llm/: client.py
src/reqvallive/metrics/: registry.py
src/reqvallive/models/: session.py
src/reqvallive/mqtt/: subscriber.py
src/reqvallive/reports/: catia_update.py  html_report.py  markdown_export.py
src/reqvallive/static/: app.js  diagram.js  min_separation.json  styles.css
src/reqvallive/sysml/: generator.py  (+1 more)
tests/: test_catia_update.py  test_criteria_gate.py  test_fail_latch.py  test_gse_mount.py  test_import_catia.py  test_mvp.py  test_procedure_report.py  test_sc_snapshot.py  test_step1_catia_flow.py  test_window_variation.py
(+1 files in other folders)
